ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: page-counter
  annotations:
    haproxy.org/path-rewrite: |
      /count /cgi-bin/count.py
      /reset /cgi-bin/reset.py
      /grafana/(.*) /\1
spec:
  ingressClassName: haproxy
  rules:
    - host: "www.example.com"
      http:
        paths:
          - path: /count
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /reset
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
